--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -16,18 +16,17 @@ body {
     margin: auto;
 }
 .userInfo p {
-    text-align: center;
     font-size: 14px;
 }
 
 .publicRepos {
 }
 
-
-[class*="col-"] {
-    float: left;
+@media only screen and (min-width: 768px){
+    [class*="col-"] {
+        float: left;
+    }
 }
-
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     [class*="col-"] {
