--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -10,16 +10,16 @@ body {
     margin-top: 15px;
 }
 .userInfo img {
-    height: 40px;
-    width: 40px;
-    border-radius: 20px;
-    margin: auto;
+    height: 60px;
+    width: 60px;
+    border-radius: 30px;
 }
 .userInfo p {
     font-size: 14px;
 }
 
 .publicRepos {
+    margin-top: 25px;
 }
 
 @media only screen and (min-width: 768px){
