--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -27,7 +27,11 @@ body {
 .date {
 
 }
+hr {
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    width: 50%;
 
+}
 @media only screen and (min-width: 768px){
     [class*="col-"] {
         float: left;
