--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-color: #bfbfbf;
+    background-color: #cfcfcf;
 }
 
 .userInfo {
@@ -19,10 +19,13 @@ body {
 }
 
 .publicRepos {
-    margin-top: 25px;
+    margin-top: 15px;
 }
 h2 {
     text-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+h4 {
+    text-shadow: 0 1px 2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 hr {
