--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -15,7 +15,9 @@ body {
     border-radius: 30px;
 }
 .userInfo p {
-    font-size: 18px;
+    font-size: 16px;
+    text-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
 }
 .publicRepos {
     margin-top: 15px;
@@ -34,10 +36,6 @@ h3 {
     text-shadow: 0 1px 2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-hr {
-
-}
-
 @media only screen and (min-width: 768px){
     [class*="col-"] {
         float: left;
@@ -52,7 +50,7 @@ hr {
     }
 
     [class*="mrg-"] {
-        margin-left: 16%;
+        margin-left: 36%;
     }
 }
 
